src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Registration Process</fullName>
        <description>Process for Partners to create leads and register them</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attempting Contact</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Recycled</fullName>
        </values>
        <values>
            <fullName>Unqualified Forever</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Lead Process</fullName>
        <description>Standard Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Attempting Contact</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Recycled</fullName>
        </values>
        <values>
            <fullName>Unqualified Forever</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Activity_Score__c</fullName>
        <formula>IF(mkto2__Lead_Score__c&lt;=0,4,
IF(AND(mkto2__Lead_Score__c&gt;=1,mkto2__Lead_Score__c&lt;=10),3,
IF(AND(mkto2__Lead_Score__c&gt;=11,mkto2__Lead_Score__c&lt;=50),2,
IF(mkto2__Lead_Score__c&gt;50,1,4
))))</formula>
        <label>Activity Score Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdWords_Keyword__c</fullName>
        <externalId>true</externalId>
        <label>AdWords Keyword</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alernate_Phone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AppJam_Presentation_Topic__c</fullName>
        <label>AppJam Presentation Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppJam_Presenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AppJam Presenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppJam_Skill_Level__c</fullName>
        <label>AppJam Skill Level</label>
        <picklist>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AppJam_Use_Case__c</fullName>
        <label>AppJam Use Case</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AppJam_What_Will_You_Teach__c</fullName>
        <label>AppJam What Will You Teach?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>App_Map_First_Visit__c</fullName>
        <label>App Map First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>App_Map_Last_Visit__c</fullName>
        <label>App Map Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Stack__c</fullName>
        <label>Application Stack</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java/.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_a__c</fullName>
        <label>Are you a</label>
        <picklist>
            <picklistValues>
                <fullName>App Ops Ecosystem Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Platform Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Service Provider Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User Looking for a Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecosystem Ally</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Territory__c</fullName>
        <formula>IF(!ISBLANK(Lead_Territory__c),TRUE,FALSE)</formula>
        <label>Assigned To Territory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buyer_Persona__c</fullName>
        <description>Persona field to identify the Buyer Persona for Marketing purposes</description>
        <label>Buyer Persona</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFCR_FCCRM_Threshold__c</fullName>
        <description>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</description>
        <formula>/*the value in this field is compared against the configured Full Circle CRM engagement score*/
/*modify this formula as your company&apos;s engagement threshold changes*/
IF(ISPICKVAL(Status,&apos;Unqualified Forever&apos;)||
(Do_Not_MQL__c = TRUE),-2000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Circle CRM Engagement Threshold. Modify this formula as your requirements change.</inlineHelpText>
        <label>FCCRM Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CFCR_Status_Last_Set__c</fullName>
        <description>Most recent update of the Lead Status field. Set with Workflow.</description>
        <inlineHelpText>Most recent update of the Lead Status field.</inlineHelpText>
        <label>Status Last Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CI_Exclude_From_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Exclude From Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cannot_be_cleaned_by_DQS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when is not possible for our Data Quality Specialist is unable to clean, or normalize the data.</description>
        <inlineHelpText>Check this box when the information cannot be verified.</inlineHelpText>
        <label>Cannot be cleaned by DQS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cleaned_by__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is us by our Data Quality Expert to indicate that all possible fields have been updated and normalized.</description>
        <inlineHelpText>Check this box if the data has been cleaned and normalized.</inlineHelpText>
        <label>Cleaned by DQS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Email_Domain__c</fullName>
        <label>Company Email Domain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Search_Phrase__c</fullName>
        <label>Competitor Search Phrase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connect_and_Sell_Campaigns__c</fullName>
        <label>Connect and Sell Campaigns</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Lead Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_HQ_Phone__c</fullName>
        <description>Corporate phone number</description>
        <label>Corp. HQ Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>IP-Based City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Country__c</fullName>
        <label>IP-Based Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Organization__c</fullName>
        <label>IP-Based Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Owner_Id__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Postal_Code__c</fullName>
        <description>Used by marketing to store IP Based Zip Code</description>
        <label>IP-Based Zip/Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_State_Province__c</fullName>
        <label>IP-Based State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: used internally</description>
        <label>Cloud MDM Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud MDM: synchronize Lead data with Bean</description>
        <inlineHelpText>Cloud MDM: synchronize Lead data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Classifications__c</fullName>
        <label>Demo Classifications</label>
        <picklist>
            <picklistValues>
                <fullName>Data Cleansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deduplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrichment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Demo ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <description>Demo Edition only</description>
        <inlineHelpText>Demo Edition only</inlineHelpText>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__VAT_ID__c</fullName>
        <label>VAT ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_com_DUNS__c</fullName>
        <formula>DandbCompany.DunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_com_Revenue__c</fullName>
        <formula>DandbCompany.SalesVolume</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <label>Database</label>
        <picklist>
            <picklistValues>
                <fullName>DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostgreSQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybase</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DatetimeField__c</fullName>
        <label>Datetime Field</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Deal ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <label>Deal Source</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Stage__c</fullName>
        <label>Deal Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Option__c</fullName>
        <label>Deployment Option</label>
        <picklist>
            <picklistValues>
                <fullName>SaaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <inlineHelpText>Under what division does this company fall?</inlineHelpText>
        <label>Division</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not QL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Domain_Name__c</fullName>
        <formula>RIGHT(Email, LEN(Email) - FIND(&quot;@&quot;, Email))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download_Time_Stamp__c</fullName>
        <label>Download Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Subject_Line__c</fullName>
        <label>Email Subject Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Type__c</fullName>
        <label>End-User Type</label>
        <picklist>
            <picklistValues>
                <fullName>VAR Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator/Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer/Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Architect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_APM_Solution_s__c</fullName>
        <label>Existing APM Solution(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Built in-house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compuware DynaTrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Relic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Wily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM ITCAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Avicode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opnet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpTier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quest Foglight</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Update_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This counter is changed any time this object is updated by the response management system.</description>
        <inlineHelpText>This counter is changed any time this object is updated by the response management system.</inlineHelpText>
        <label>Admin Update Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Created_By_Lead_Conversion__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Set to true by default this field maps to contact on conversion.</description>
        <label>Created By Lead Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Defer_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrative field that indicates that this lead assignment should be deferred until receipt of a response</description>
        <label>Defer Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Name_Created_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Indicates the create date of the name.</description>
        <label>Name Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Nurture_Timeout__c</fullName>
        <description>Nurture timeout for the lead.</description>
        <inlineHelpText>If populated, this field indicates the next possible date this lead could promote out of nurture and be sent back to sales for follow up.</inlineHelpText>
        <label>Nurture Timeout</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_PostAssignNotificationPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if reassignment has been requested for this lead/contact based on receipt of a qualified response.</description>
        <label>Post Assign Notification Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Prior_Lead_Score__c</fullName>
        <description>The Lead Score prior to the most recent update.</description>
        <inlineHelpText>The Lead Score prior to the most recent update.</inlineHelpText>
        <label>Prior Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Response_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Response score on this lead.</description>
        <inlineHelpText>The score of the lead at the time the most recent response was processed.</inlineHelpText>
        <label>Response Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Status_Synced_From_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrative field that is set when lead status is active and tied to an active response</description>
        <label>Status Synced From Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Superpower_Field__c</fullName>
        <description>This field will always be cleared after being set. Please see Full Circle CRM Documentation for use of this field.</description>
        <inlineHelpText>This field will always be cleared after being set. Please see Full Circle CRM Documentation for use of this field.</inlineHelpText>
        <label>FCCRM Superpower Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Take_Scoring_Snapshot__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrative field that can be used to trigger scoring.</description>
        <label>Do Pending Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federal_Employee_Domain__c</fullName>
        <formula>CONTAINS(Domain_Name__c, &quot;.gov&quot;)||
CONTAINS(Domain_Name__c, &quot;.mil&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Employee Domain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_meeting_set_by__c</fullName>
        <label>First meeting set by</label>
        <picklist>
            <picklistValues>
                <fullName>Robert Jweinat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lee Weinberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Reksten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Fortune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Lam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Boysen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank Swain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marc Ownbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Majeski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Nelson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Wilson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alec Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phil Evans</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FreeForm_Download_Time__c</fullName>
        <label>FreeForm Download Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Handraiser_Date__c</fullName>
        <label>Handraiser Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Handraiser_Form__c</fullName>
        <label>Handraiser Form</label>
        <picklist>
            <picklistValues>
                <fullName>.NET Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Day Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUM Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Has_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_they_find_us_Mapped__c</fullName>
        <formula>TEXT(How_did_they_find_us__c )</formula>
        <label>How did they find us? Mapped</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_they_find_us__c</fullName>
        <description>Marketing research</description>
        <label>How did they find us?</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Search Engine</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sourceforge</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Java Performance Tuning</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>DZone</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stack Overflow</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>High Scalability</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>infoq.com</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search (SEO)</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Google (DoubleClick)</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Website</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Google AdWords</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Other Web Source</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Web Source</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>AD Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD Direct Download</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>